<resources>
    <string name="app_name">Taller 1</string>
    <string name="inp_username">Usuario</string>
    <string name="btn_forget_password">Olvidar Contraseña</string>
    <string name="chk_remenber_data">Recordar mis datos</string>
    <string name="chk_politicas">Términos y condiciones</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_sing_up">Registrarse</string>
    <string name="password">Contraseña:</string>
    <string name="register_names">Nombres:</string>
    <string name="blank" />
    <string name="register_last_name">Apellidos:</string>
    <string name="register_email">Correo:</string>
    <string name="register_username">Usuario:</string>
    <string name="register_password">Contraseña</string>
    <string name="register_comfirn_password">Vuelva a escribir la contraseña:</string>
    <string name="register_sex">Sexo:</string>
    <string name="back">Volver</string>
    <string name="register_create">Crear usuario</string>
    <string name="idfisica">Fisica</string>
    <string name="idtexto">Texto</string>
    <string name="idgeometria">Geometria</string>
    <string name="idvelocidad">Velocidad</string>
    <string name="idfuerza">Fuerza</string>
    <string name="idvoltaje">Voltaje</string>
    <string name="classvelocidad">este es la clase velocidad</string>
    <string-array name="sp_sex">
        <item>M</item>
        <item>F</item>
    </string-array>
    <string name="title_activity_home2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>