<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFisica">

    <Button
        android:id="@+id/btn_velocidad"
        android:layout_width="124dp"
        android:layout_height="151dp"
        android:text="@string/idvelocidad"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="96dp" />

    <Button
        android:id="@+id/btn_fuerza"
        android:layout_width="122dp"
        android:layout_height="145dp"
        android:text="@string/idfuerza"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="96dp" />

    <Button
        android:id="@+id/btn_voltaje"
        android:layout_width="143dp"
        android:layout_height="168dp"
        android:text="@string/idvoltaje"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="329dp" />
</androidx.constraintlayout.widget.ConstraintLayout>