<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/btn_fisica"
        android:layout_width="145dp"
        android:layout_height="165dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:text="@string/idfisica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/idtexto"
        android:layout_width="137dp"
        android:layout_height="163dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="72dp"
        android:text="@string/idtexto"
        app:layout_constraintStart_toEndOf="@+id/btn_fisica"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_geometria"
        android:layout_width="143dp"
        android:layout_height="195dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:text="@string/idgeometria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_fisica" />
</androidx.constraintlayout.widget.ConstraintLayout>