<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="HOME"
            android:textColor="@color/green_dark"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_fisica"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:clickable="true"
            android:onClick="onClick_btn_fisica"
            android:text="@string/idfisica"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <Button
            android:id="@+id/btn_text"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/idtexto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <Button
            android:id="@+id/btn_geometria"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/idgeometria"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_fisica" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>